fix intro spacing

--- a/_sass/_includes/_content.scss
+++ b/_sass/_includes/_content.scss
@@ -6,7 +6,7 @@
 
 .intro {
 	
-	margin-top: 0px;
+	margin-top: 20px;
 
 	h1 {
 
